Changed the quotes

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -12,21 +12,12 @@ and open the template in the editor.
     </head>
     <body>
         <div>
-<!-- Share a programming quote here by adding lines like this:
-<p>"put your quote here" ~and your author here</p>
-<p>shared by yourNameHere (yourGitIDhere)</p>
-<br>
--->
-            <p>"Every great developer you know got there by solving
-            problems they were unqualified to solve until they
-            actually did it" ~The Pragmatic Programmer</p>
-            <p>shared by Kelli Miller (MillerITEd)</p>
+            <p>"Programming isn't about what you know; it's about what you can figure out." - Chris Pine</p>
+            <p>shared by Owen Justice (OwenJustice)</p>
             <br>
             
-            <p>"Be curious. Read widely. Try new things. I think a lot of
-                people call intelligence boils down to curiosity."
-                ~Aaron Swartz</p>
-            <p>shared by Kelli Miller (kmiller29)</p>
+            <p>"The only way to learn a new programming language is by writing programs in it." - Dennis Ritchie</p>
+            <p>shared by Owen Justice (OwenJustice)</p>
             <br>
         </div>
      </body>
